updated for multiple bridges. tested it 4 times.

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,14 @@ GAME_PORT_WS=1865
 GAME_PORT_HTTPS=1866
 GAME_PORT_WSS=1867
 
+# ==========================================
+# MULTI-BRIDGE CONFIGURATION
+# ==========================================
+# Unique identifier for this recording station/bridge
+# Leave empty or remove for single-bridge deployments
+# Examples: Bridge-Alpha, Bridge-Beta, Bridge-Charlie
+# BRIDGE_ID=Bridge-Alpha
+
 # Audio Configuration
 AUDIO_DEVICE_INDEX=0
 SAMPLE_RATE=44100
