--- a/.env.example
+++ b/.env.example
@@ -69,8 +69,10 @@ MIN_TRANSCRIPTION_CONFIDENCE=0.5
 # Speaker Diarization
 ENABLE_SPEAKER_DIARIZATION=true
 USE_NEURAL_DIARIZATION=true
-SPEAKER_SIMILARITY_THRESHOLD=0.5
-SPEAKER_EMBEDDING_THRESHOLD=0.35
+# SIMILARITY threshold: How similar voices must be (0.0-1.0) to be considered same speaker
+# Higher = stricter matching = more unique speakers detected
+# Recommended: 0.75-0.85 for distinct voices, 0.65-0.75 for similar voices
+SPEAKER_EMBEDDING_THRESHOLD=0.75
 MIN_EXPECTED_SPEAKERS=1
 MAX_EXPECTED_SPEAKERS=6
 EXPECTED_BRIDGE_CREW=6
