--- a/.env.example
+++ b/.env.example
@@ -105,7 +105,13 @@ TRANSCRIPTION_WORKERS=2
 ENABLE_LLM_REPORTS=true
 
 # Ollama Server Configuration
-# Default assumes Ollama running locally on default port
+# Local (devcontainer): Start with `ollama serve &` then pull a model
+#   OLLAMA_HOST=http://localhost:11434
+#   OLLAMA_MODEL=llama3.2          # Smaller, faster (~2GB)
+#   OLLAMA_MODEL=qwen2.5:7b        # Good balance (~4GB)
+# Remote (dedicated GPU server):
+#   OLLAMA_HOST=http://192.168.x.x:11434
+#   OLLAMA_MODEL=qwen2.5:14b-instruct  # Higher quality (~9GB)
 OLLAMA_HOST=http://localhost:11434
 OLLAMA_MODEL=llama3.2
 OLLAMA_TIMEOUT=120
