updated prompt and CUDA 12

--- a/.env.example
+++ b/.env.example
@@ -47,8 +47,9 @@ AUDIO_CHUNK_MS=100
 
 # Whisper Model Configuration
 # Model sizes: tiny, base, small, medium, large-v3
-# Recommended: base (fast, good accuracy for bridge audio)
-WHISPER_MODEL_SIZE=base
+# large-v3 provides best accuracy (YouTube-quality transcription)
+# Performance on CPU: tiny ~0.5s, base ~2-3s, small ~5-8s, large-v3 ~35-70s per segment
+WHISPER_MODEL_SIZE=large-v3
 WHISPER_DEVICE=cpu
 WHISPER_COMPUTE_TYPE=int8
 WHISPER_MODEL_PATH=./data/models/whisper/
@@ -64,7 +65,8 @@ MIN_SILENCE_DURATION=0.3  # Shorter for better multi-speaker segmentation
 # Transcription Settings
 TRANSCRIBE_REALTIME=true
 TRANSCRIBE_LANGUAGE=en
-MIN_TRANSCRIPTION_CONFIDENCE=0.5
+# Lower confidence threshold to retain more transcripts (0.3-0.5 recommended)
+MIN_TRANSCRIPTION_CONFIDENCE=0.3
 
 # Speaker Diarization
 ENABLE_SPEAKER_DIARIZATION=true
@@ -93,8 +95,10 @@ AUDIO_RETENTION_DAYS=0
 TRANSCRIPT_RETENTION_DAYS=30
 
 # Performance Tuning
-MAX_SEGMENT_QUEUE_SIZE=100
-TRANSCRIPTION_WORKERS=2
+# Large queue to handle long recordings (large-v3 model is slower than real-time)
+MAX_SEGMENT_QUEUE_SIZE=1000
+# More workers for parallel transcription
+TRANSCRIPTION_WORKERS=4
 
 # ============================================
 # LLM INTEGRATION (Ollama)
