--- a/.env.example
+++ b/.env.example
@@ -71,6 +71,24 @@ MIN_TRANSCRIPTION_CONFIDENCE=0.3
 # Speaker Diarization
 ENABLE_SPEAKER_DIARIZATION=true
 USE_NEURAL_DIARIZATION=true
+
+# CPU-Optimized Diarization (for systems without GPU)
+# Options: auto, true, false
+# - auto: Use CPU mode automatically when no GPU detected (default)
+# - true: Force CPU mode (uses resemblyzer - 5-10x faster than pyannote on CPU)
+# - false: Always use neural (pyannote) even on CPU
+# CPU mode accuracy is within 5-10% of neural mode but much faster on CPU
+USE_CPU_DIARIZATION=auto
+
+# CPU Speaker Threshold (only used when USE_CPU_DIARIZATION is active)
+# This is the minimum similarity for voices to be considered the SAME speaker
+# HIGHER values = stricter matching = MORE speakers detected
+# LOWER values = looser matching = FEWER speakers detected
+# Recommended: 0.82-0.88 (default: 0.85)
+# If detecting too few speakers, try 0.88-0.92
+# If detecting too many speakers, try 0.78-0.82
+CPU_SPEAKER_THRESHOLD=0.85
+
 # SIMILARITY threshold: How similar voices must be (0.0-1.0) to be considered same speaker
 # Higher = stricter matching = more unique speakers detected
 # Recommended: 0.75-0.85 for distinct voices, 0.65-0.75 for similar voices
