--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,9 @@ pyannote.audio>=3.1.0
 omegaconf>=2.3.0
 scipy>=1.10.0
 
+# CPU-optimized Speaker Embeddings (alternative to pyannote for CPU-only systems)
+resemblyzer>=0.1.3
+
 # ============================================
 # LLM Integration
 # ============================================
