updated UI, and diaratization

--- a/.env.example
+++ b/.env.example
@@ -68,6 +68,13 @@ TRANSCRIBE_LANGUAGE=en
 # Lower confidence threshold to retain more transcripts (0.3-0.5 recommended)
 MIN_TRANSCRIPTION_CONFIDENCE=0.3
 
+# Analysis Confidence Filter
+# Segments below this confidence are excluded from pattern analysis
+# (Seven Habits, communication quality, scorecards) to avoid analyzing garbled text
+# Set to 0.0 to disable filtering and analyze all segments
+# Recommended: 0.10-0.30 depending on audio quality
+ANALYSIS_CONFIDENCE_THRESHOLD=0.10
+
 # Speaker Diarization
 ENABLE_SPEAKER_DIARIZATION=true
 USE_NEURAL_DIARIZATION=true
@@ -135,8 +142,8 @@ ENABLE_LLM_REPORTS=true
 #   OLLAMA_HOST=http://192.168.x.x:11434
 #   OLLAMA_MODEL=qwen2.5:14b-instruct  # Higher quality (~9GB)
 OLLAMA_HOST=http://localhost:11434
-OLLAMA_MODEL=llama3.2
-OLLAMA_TIMEOUT=120
+OLLAMA_MODEL=qwen2.5:14b-instruct
+OLLAMA_TIMEOUT=300
 
 # Report Generation Style
 # Options: entertaining, professional, technical, casual
