lots of updates, testing on another computer

--- a/.env.example
+++ b/.env.example
@@ -143,7 +143,8 @@ ENABLE_LLM_REPORTS=true
 #   OLLAMA_MODEL=qwen2.5:14b-instruct  # Higher quality (~9GB)
 OLLAMA_HOST=http://localhost:11434
 OLLAMA_MODEL=qwen2.5:14b-instruct
-OLLAMA_TIMEOUT=300
+# Timeout for LLM generation in seconds (narrative summaries can take 1-2 minutes)
+OLLAMA_TIMEOUT=600
 
 # Report Generation Style
 # Options: entertaining, professional, technical, casual
@@ -152,3 +153,38 @@ OLLAMA_TIMEOUT=300
 # 'technical' - Detailed technical breakdowns
 # 'casual' - Friendly, conversational tone
 LLM_REPORT_STYLE=entertaining
+
+# ============================================
+# TELEMETRY-AUDIO CORRELATION
+# ============================================
+
+# Enable telemetry-based role confidence boosting
+# Correlates console actions with nearby voice segments to validate speaker roles
+# This can boost role confidence from ~75-85% (keyword-only) to ~90-95%
+
+# Time window for matching telemetry events with audio segments (milliseconds)
+# Events within this window of an audio segment will be correlated
+CORRELATION_WINDOW_MS=500
+
+# Minimum confidence boost from telemetry correlation (0.0-1.0)
+# Applied for matches at the edge of the correlation window
+MIN_CONFIDENCE_BOOST=0.1
+
+# Maximum confidence boost from telemetry correlation (0.0-1.0)
+# Applied for exact time matches (0ms delta)
+MAX_CONFIDENCE_BOOST=0.3
+
+# ============================================
+# WEB SERVER CONFIGURATION
+# ============================================
+
+# Server host and port
+WEB_SERVER_HOST=0.0.0.0
+WEB_SERVER_PORT=8000
+
+# Maximum file upload size in MB (default: 2048 = 2GB)
+# Increase for very long recordings
+WEB_MAX_UPLOAD_MB=2048
+
+# CORS allowed origins (comma-separated)
+WEB_CORS_ORIGINS=*
