--- a/.env.example
+++ b/.env.example
@@ -107,6 +107,14 @@ BRIDGE_ROLES=Captain,Helm,Tactical,Science,Engineering,Communications
 # HUGGINGFACE_TOKEN=your_token_here  # Required for neural diarization (pyannote.audio)
 # Accept licenses at: https://huggingface.co/pyannote/speaker-diarization-3.1 and https://huggingface.co/pyannote/embedding
 
+# Chunk-Based Diarization for Long Audio
+# Audio longer than CHUNK_THRESHOLD is processed in chunks to prevent speaker drift
+# Speaker drift occurs when embeddings accumulate errors over long recordings,
+# causing distinct voices to merge into fewer clusters
+DIARIZATION_CHUNK_THRESHOLD=600   # Process in chunks if audio > 10 minutes
+DIARIZATION_CHUNK_DURATION=300    # Each chunk is 5 minutes
+DIARIZATION_CHUNK_OVERLAP=30      # 30 second overlap between chunks
+
 # Engagement Analytics
 ENABLE_ENGAGEMENT_METRICS=true
 ENGAGEMENT_UPDATE_INTERVAL=30.0
