--- a/.env.example
+++ b/.env.example
@@ -111,9 +111,16 @@ BRIDGE_ROLES=Captain,Helm,Tactical,Science,Engineering,Communications
 # Audio longer than CHUNK_THRESHOLD is processed in chunks to prevent speaker drift
 # Speaker drift occurs when embeddings accumulate errors over long recordings,
 # causing distinct voices to merge into fewer clusters
-DIARIZATION_CHUNK_THRESHOLD=600   # Process in chunks if audio > 10 minutes
-DIARIZATION_CHUNK_DURATION=300    # Each chunk is 5 minutes
+DIARIZATION_CHUNK_THRESHOLD=900   # Process in chunks if audio > 15 minutes
+DIARIZATION_CHUNK_DURATION=600    # Each chunk is 10 minutes
 DIARIZATION_CHUNK_OVERLAP=30      # 30 second overlap between chunks
+
+# Audio Preprocessing for Better Diarization
+# Preprocessing improves voice embedding quality by reducing noise
+DIARIZATION_PREPROCESS=true       # Enable audio preprocessing before diarization
+# Noise reduction strength (0.0-1.0): higher = more aggressive noise removal
+# 0.3 is conservative, 0.5 is moderate, 0.7+ may affect voice quality
+NOISE_REDUCE_STRENGTH=0.3
 
 # Engagement Analytics
 ENABLE_ENGAGEMENT_METRICS=true
