final tested on 6 hours data

--- a/.env.example
+++ b/.env.example
@@ -199,7 +199,7 @@ WEB_SERVER_PORT=8000
 
 # Maximum file upload size in MB (default: 2048 = 2GB)
 # Increase for very long recordings
-WEB_MAX_UPLOAD_MB=2048
+WEB_MAX_UPLOAD_MB=150
 
 # CORS allowed origins (comma-separated)
 WEB_CORS_ORIGINS=*
@@ -209,3 +209,9 @@ WEB_CORS_ORIGINS=*
 # Users can still view transcripts and download reports
 # Useful for deployments where audio storage is not allowed
 DISABLE_AUDIO_FILES=false
+
+# Read-only mode - disable all analysis and processing
+# When true: Server only displays existing reports, no new analysis or regeneration
+# Implies DISABLE_AUDIO_FILES=true
+# Users can only browse and download existing reports
+READ_ONLY_MODE=false
