--- a/.env.example
+++ b/.env.example
@@ -91,17 +91,18 @@ USE_CPU_DIARIZATION=auto
 # This is the minimum similarity for voices to be considered the SAME speaker
 # HIGHER values = stricter matching = MORE speakers detected
 # LOWER values = looser matching = FEWER speakers detected
-# Recommended: 0.82-0.88 (default: 0.85)
-# If detecting too few speakers, try 0.88-0.92
-# If detecting too many speakers, try 0.78-0.82
-CPU_SPEAKER_THRESHOLD=0.85
+# Recommended: 0.70-0.78 (default: 0.72)
+# If detecting too few speakers, try 0.78-0.85
+# If detecting too many speakers, try 0.65-0.72
+CPU_SPEAKER_THRESHOLD=0.72
 
 # SIMILARITY threshold: How similar voices must be (0.0-1.0) to be considered same speaker
 # Higher = stricter matching = more unique speakers detected
-# Recommended: 0.75-0.85 for distinct voices, 0.65-0.75 for similar voices
-SPEAKER_EMBEDDING_THRESHOLD=0.75
-MIN_EXPECTED_SPEAKERS=1
-MAX_EXPECTED_SPEAKERS=6
+# Lower = more aggressive voice merging = fewer speakers detected
+# Recommended: 0.70-0.78 for bridge crews, 0.65-0.72 for similar voices/TTS
+SPEAKER_EMBEDDING_THRESHOLD=0.65
+MIN_EXPECTED_SPEAKERS=3
+MAX_EXPECTED_SPEAKERS=8
 EXPECTED_BRIDGE_CREW=6
 BRIDGE_ROLES=Captain,Helm,Tactical,Science,Engineering,Communications
 # HUGGINGFACE_TOKEN=your_token_here  # Required for neural diarization (pyannote.audio)
@@ -121,6 +122,21 @@ DIARIZATION_PREPROCESS=true       # Enable audio preprocessing before diarizatio
 # Noise reduction strength (0.0-1.0): higher = more aggressive noise removal
 # 0.3 is conservative, 0.5 is moderate, 0.7+ may affect voice quality
 NOISE_REDUCE_STRENGTH=0.3
+
+# Sub-Segment Diarization (for splitting multi-speaker segments)
+# Segments longer than this threshold are analyzed for multiple speakers
+SUBSEGMENT_THRESHOLD=3.0           # Segments > 3s get sub-segmented
+SUBSEGMENT_WINDOW=1.5              # Extract embedding every 1.5s
+SUBSEGMENT_HOP=0.5                 # Hop 0.5s for fine-grained detection
+SUBSEGMENT_SPEAKER_THRESHOLD=0.75  # Similarity threshold within segment
+
+# Speaker Change Detection
+# Minimum pause duration to consider as potential speaker boundary
+MIN_PAUSE_DURATION=0.7             # 0.7s pause = potential speaker switch
+# Minimum segment duration after splitting (prevents micro-segments)
+MIN_SPLIT_SEGMENT_DURATION=2.5     # At least 2.5 seconds per speaker
+# Minimum segments for a speaker to be "major" (smaller get merged)
+MIN_SPEAKER_SEGMENTS=5             # Speakers with < 5 segments get consolidated
 
 # Engagement Analytics
 ENABLE_ENGAGEMENT_METRICS=true
