--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,9 @@ resemblyzer>=0.1.3
 # HTTP client for API requests (may already be installed)
 requests>=2.31.0
 
+# Ollama Python client for local LLM inference
+ollama>=0.4.0
+
 # ============================================
 # Web Server
 # ============================================
