updated UI, added admin, and telemetry

--- a/.env.example
+++ b/.env.example
@@ -231,3 +231,16 @@ DISABLE_AUDIO_FILES=false
 # Implies DISABLE_AUDIO_FILES=true
 # Users can only browse and download existing reports
 READ_ONLY_MODE=false
+
+# ============================================
+# AZURE APPLICATION INSIGHTS (Optional)
+# ============================================
+# Connection string from Azure Portal > Application Insights > Overview
+# Leave empty to disable telemetry completely
+APPINSIGHTS_CONNECTION_STRING=
+
+# Sampling percentage (0-100). Lower values reduce cost. Default: 100
+APPINSIGHTS_SAMPLING_PERCENTAGE=100
+
+# Cloud role name for distributed tracing
+APPINSIGHTS_CLOUD_ROLE=sh-learning-ai
