updated prompt and audio processing, fixed bugs, deployed in alpha

--- a/.env.example
+++ b/.env.example
@@ -54,6 +54,12 @@ WHISPER_DEVICE=cpu
 WHISPER_COMPUTE_TYPE=int8
 WHISPER_MODEL_PATH=./data/models/whisper/
 
+# Whisper Hotwords (faster-whisper beam search biasing)
+# Comma-separated domain terms to bias beam search toward.
+# Unlike initial_prompt, hotwords have NO token limit.
+# Leave empty to use the built-in Starship Horizons hotwords list.
+# WHISPER_HOTWORDS=warp, Hedge, Craylor, Kralien, nuke, terahertz
+
 # Voice Activity Detection (VAD)
 # Energy threshold for normalized float32 audio (range: 0.0-1.0)
 # Typical values: 0.05-0.10 depending on room noise
@@ -81,11 +87,13 @@ USE_NEURAL_DIARIZATION=true
 
 # CPU-Optimized Diarization (for systems without GPU)
 # Options: auto, true, false
-# - auto: Use CPU mode automatically when no GPU detected (default)
+# - auto: Use CPU mode automatically when no GPU detected
 # - true: Force CPU mode (uses resemblyzer - 5-10x faster than pyannote on CPU)
 # - false: Always use neural (pyannote) even on CPU
-# CPU mode accuracy is within 5-10% of neural mode but much faster on CPU
-USE_CPU_DIARIZATION=auto
+# IMPORTANT: Set to 'false' to ensure consistent reports across all environments.
+# 'auto' causes GPU systems to use pyannote and CPU systems to use resemblyzer,
+# which are different algorithms producing different speaker clustering results.
+USE_CPU_DIARIZATION=false
 
 # CPU Speaker Threshold (only used when USE_CPU_DIARIZATION is active)
 # This is the minimum similarity for voices to be considered the SAME speaker
@@ -100,13 +108,16 @@ CPU_SPEAKER_THRESHOLD=0.72
 # Higher = stricter matching = more unique speakers detected
 # Lower = more aggressive voice merging = fewer speakers detected
 # Recommended: 0.70-0.78 for bridge crews, 0.65-0.72 for similar voices/TTS
-SPEAKER_EMBEDDING_THRESHOLD=0.65
+SPEAKER_EMBEDDING_THRESHOLD=0.72
 MIN_EXPECTED_SPEAKERS=3
 MAX_EXPECTED_SPEAKERS=8
 EXPECTED_BRIDGE_CREW=6
 BRIDGE_ROLES=Captain,Helm,Tactical,Science,Engineering,Communications
-# HUGGINGFACE_TOKEN=your_token_here  # Required for neural diarization (pyannote.audio)
-# Accept licenses at: https://huggingface.co/pyannote/speaker-diarization-3.1 and https://huggingface.co/pyannote/embedding
+# Required for neural diarization (pyannote.audio)
+# You MUST set this token and accept model licenses for neural diarization to work.
+# Accept licenses at: https://huggingface.co/pyannote/speaker-diarization-3.1
+#                 and: https://huggingface.co/pyannote/embedding
+HUGGINGFACE_TOKEN=your_token_here
 
 # Chunk-Based Diarization for Long Audio
 # Audio longer than CHUNK_THRESHOLD is processed in chunks to prevent speaker drift
@@ -120,8 +131,8 @@ DIARIZATION_CHUNK_OVERLAP=30      # 30 second overlap between chunks
 # Preprocessing improves voice embedding quality by reducing noise
 DIARIZATION_PREPROCESS=true       # Enable audio preprocessing before diarization
 # Noise reduction strength (0.0-1.0): higher = more aggressive noise removal
-# 0.3 is conservative, 0.5 is moderate, 0.7+ may affect voice quality
-NOISE_REDUCE_STRENGTH=0.3
+# 0.3 is conservative, 0.5 is moderate (good for multi-speaker bridge), 0.7+ may affect voice quality
+NOISE_REDUCE_STRENGTH=0.5
 
 # Sub-Segment Diarization (for splitting multi-speaker segments)
 # Segments longer than this threshold are analyzed for multiple speakers
