clean bug fixing

--- a/.env.example
+++ b/.env.example
@@ -99,16 +99,16 @@ USE_CPU_DIARIZATION=false
 # This is the minimum similarity for voices to be considered the SAME speaker
 # HIGHER values = stricter matching = MORE speakers detected
 # LOWER values = looser matching = FEWER speakers detected
-# Recommended: 0.70-0.78 (default: 0.72)
-# If detecting too few speakers, try 0.78-0.85
-# If detecting too many speakers, try 0.65-0.72
-CPU_SPEAKER_THRESHOLD=0.72
+# Recommended: 0.60-0.70 (default: 0.60 for 6-crew bridges)
+# If detecting too few speakers, try 0.70-0.80
+# If detecting too many speakers, try 0.50-0.60
+CPU_SPEAKER_THRESHOLD=0.60
 
 # SIMILARITY threshold: How similar voices must be (0.0-1.0) to be considered same speaker
 # Higher = stricter matching = more unique speakers detected
 # Lower = more aggressive voice merging = fewer speakers detected
-# Recommended: 0.70-0.78 for bridge crews, 0.65-0.72 for similar voices/TTS
-SPEAKER_EMBEDDING_THRESHOLD=0.72
+# Recommended: 0.60-0.70 for bridge crews (0.60 for 6 crew), 0.75-0.85 for similar voices/TTS
+SPEAKER_EMBEDDING_THRESHOLD=0.60
 MIN_EXPECTED_SPEAKERS=3
 MAX_EXPECTED_SPEAKERS=8
 EXPECTED_BRIDGE_CREW=6
