updated accuracy and models.

--- a/.env.example
+++ b/.env.example
@@ -178,13 +178,24 @@ ENABLE_LLM_REPORTS=true
 # Ollama Server Configuration
 # Local (devcontainer): Start with `ollama serve &` then pull a model
 #   OLLAMA_HOST=http://localhost:11434
-#   OLLAMA_MODEL=llama3.2          # Smaller, faster (~2GB)
-#   OLLAMA_MODEL=qwen2.5:7b        # Good balance (~4GB)
+#   OLLAMA_MODEL=llama3.2              # Smaller, faster (~2GB)
+#   OLLAMA_MODEL=qwen2.5:7b            # Good balance (~4GB)
 # Remote (dedicated GPU server):
 #   OLLAMA_HOST=http://192.168.x.x:11434
 #   OLLAMA_MODEL=qwen2.5:14b-instruct  # Higher quality (~9GB)
+# Production (dedicated GPU with 48GB+ VRAM):
+#   OLLAMA_MODEL=qwen2.5:72b-instruct  # Best quality (~40GB VRAM, Q4)
+#   OLLAMA_MODEL=llama3.3:70b          # Strong alternative (~40GB VRAM, Q4)
+# Production (multi-GPU with 64GB+ VRAM):
+#   OLLAMA_MODEL=qwen2.5:110b          # Maximum quality (~64GB VRAM, Q4)
 OLLAMA_HOST=http://localhost:11434
 OLLAMA_MODEL=qwen2.5:14b-instruct
+# Context window size in tokens (must be large enough for your prompts)
+# qwen2.5 supports up to 131072; set to model max for full transcript context
+OLLAMA_NUM_CTX=32768
+# Number of parallel workers for LLM transcript cleanup batches
+# Higher = faster cleanup but more concurrent Ollama requests
+LLM_CLEANUP_WORKERS=3
 # Timeout for LLM generation in seconds (narrative summaries can take longer for big missions)
 OLLAMA_TIMEOUT=5400
 
@@ -215,6 +226,29 @@ MIN_CONFIDENCE_BOOST=0.1
 # Maximum confidence boost from telemetry correlation (0.0-1.0)
 # Applied for exact time matches (0ms delta)
 MAX_CONFIDENCE_BOOST=0.3
+
+# ============================================
+# PARALLEL ANALYSIS PIPELINE
+# ============================================
+# Master toggle for GPU-aware parallel analysis
+# When true: CPU metrics run in parallel, LLM calls run in parallel
+# When false: All analysis steps run sequentially (original behavior)
+ENABLE_PARALLEL_ANALYSIS=true
+
+# Multi-GPU Whisper+diarization (requires 2+ CUDA GPUs)
+# When true and 2+ GPUs: Whisper on GPU:0 and pyannote on GPU:1 simultaneously
+ENABLE_PARALLEL_GPU=true
+
+# Parallel CPU metrics (quality, scorecards, confidence, learning, habits, captain)
+# These 6 independent analysis steps run simultaneously via ThreadPoolExecutor
+ENABLE_PARALLEL_CPU=true
+
+# Parallel LLM generation (narrative + story run simultaneously)
+# Even if Ollama queues internally, this eliminates scheduling overhead
+ENABLE_PARALLEL_LLM=true
+
+# Number of CPU workers for parallel metrics (0 = auto: cpu_count - 1, max 6)
+PARALLEL_CPU_WORKERS=0
 
 # ============================================
 # WEB SERVER CONFIGURATION
