--- a/.env.example
+++ b/.env.example
@@ -208,6 +208,49 @@ OLLAMA_TIMEOUT=5400
 LLM_REPORT_STYLE=entertaining
 
 # ============================================
+# LLM BACKEND OVERRIDES (Optional)
+# ============================================
+# These override the OLLAMA_* settings above. Use them to point at a
+# non-Ollama OpenAI-compatible backend (e.g. vLLM, OpenAI, etc.).
+# If not set, the system auto-derives from OLLAMA_* variables.
+# LLM_BASE_URL=http://localhost:8000/v1
+# LLM_MODEL=qwen2.5:14b-instruct
+# LLM_TIMEOUT=600
+# LLM_API_KEY=ollama
+# LLM_MAX_RETRIES=2
+
+# ============================================
+# vLLM CONFIGURATION (Optional)
+# ============================================
+# High-throughput GPU inference server. Runs alongside Ollama on a separate port.
+# Manage with: python scripts/vllm_setup.py start|stop|status|models
+# VLLM_MODEL=Qwen/Qwen2.5-3B-Instruct-AWQ
+# VLLM_PORT=8100
+# VLLM_GPU_MEMORY_UTILIZATION=0.85
+# VLLM_MAX_MODEL_LEN=16384
+#
+# Quantization and compilation
+# VLLM_QUANTIZATION=awq         # Quantization: awq, gptq, none (FP16)
+# VLLM_ENFORCE_EAGER=true       # Skip torch.compile (saves VRAM)
+#
+# Multi-GPU Parallelism
+# VLLM_TENSOR_PARALLEL_SIZE=1   # Split model across N GPUs (for large models)
+# VLLM_DATA_PARALLEL_SIZE=1     # Run N model copies for throughput
+# VLLM_PIPELINE_PARALLEL_SIZE=1 # Split model layers across N GPUs
+#
+# Auto-start vLLM with web server (no need to run vllm_setup.py start manually)
+# VLLM_AUTO_START=false
+#
+# --- Azure 4-GPU Examples (NC16as_T4_v3: 4x T4 16GB = 64GB) ---
+# Small model, max throughput:  TP=1, DP=4 (4 copies of 3B-AWQ)
+# Medium model, balanced:       TP=2, DP=2 (2 copies of 14B-AWQ across pairs)
+# Large model, max quality:     TP=4, DP=1 (1 copy of 32B+ across all GPUs)
+#
+# To use vLLM as the default LLM backend, uncomment:
+# LLM_BASE_URL=http://localhost:8100/v1
+# LLM_MODEL=Qwen/Qwen2.5-3B-Instruct-AWQ
+
+# ============================================
 # TELEMETRY-AUDIO CORRELATION
 # ============================================
 
